--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Default_Map.Default_Map
-EditorStartupMap=/Game/Maps/Default_Map.Default_Map
+GameDefaultMap=/Game/Horror_Mansion/Maps/Demo.Demo
+EditorStartupMap=/Game/Horror_Mansion/Maps/Demo.Demo
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
