--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Horror_Mansion/Maps/Demo.Demo
-EditorStartupMap=/Game/Horror_Mansion/Maps/Demo.Demo
+GameDefaultMap=/Game/NSK/Map/NSK_Map.NSK_Map
+EditorStartupMap=/Game/NSK/Map/NSK_Map.NSK_Map
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
