--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/HHR/Lev_HRTestLevel.Lev_HRTestLevel
-EditorStartupMap=/Game/HHR/Lev_HRTestLevel.Lev_HRTestLevel
+GameDefaultMap=/Game/NSK/Map/NSK_Map.NSK_Map
+EditorStartupMap=/Game/NSK/Map/NSK_Map.NSK_Map
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
