--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/HHR/Lev_HRTestLevel.Lev_HRTestLevel
 EditorStartupMap=/Game/HHR/Lev_HRTestLevel.Lev_HRTestLevel
+GlobalDefaultGameMode=/Game/LCU/Blueprints/BP_PGameMode.BP_PGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
