--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@
 GameDefaultMap=/Game/HHR/Lev_HRTestLevel.Lev_HRTestLevel
 EditorStartupMap=/Game/HHR/Lev_HRTestLevel.Lev_HRTestLevel
 GlobalDefaultGameMode=/Game/LCU/Blueprints/BP_PGameMode.BP_PGameMode_C
-
+GameInstanceClass=/Game/P_Settings/BP_P_GameInstance.BP_P_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
