--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 
-GameDefaultMap=/Game/HHR/Lev_HRTestLevel.Lev_HRTestLevel
+GameDefaultMap=/Game/KYH/Maps/L_PolluteFrontEnd.L_PolluteFrontEnd
 EditorStartupMap=/Game/HHR/Lev_HRTestLevel.Lev_HRTestLevel
 GlobalDefaultGameMode=/Game/LCU/Blueprints/BP_PGameMode.BP_PGameMode_C
 GameInstanceClass=/Game/P_Settings/BP_P_GameInstance.BP_P_GameInstance_C
