--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -154,11 +154,18 @@ ManualIPAddress=
 +EnumRedirects=(OldName="/Script/Pollute.EItemType",ValueChanges=(("AttackItem","WeaponItem")))
 +ClassRedirects=(OldName="/Script/Pollute.MyClass",NewName="/Script/Pollute.HHR_TestPlayerCharacter")
 
+[Voice]
+bEnabled=true
+
+[/Script/Engine.GameSession]
+bRequiredPushToTalk=true
+
 [/Script/Engine.GameEngine]
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
 [OnlineSubsystem]
 DefaultPlatformService=Steam
+bHasVoiceEnabled=true
 
 [OnlineSubsystemSteam]
 bEnabled=true
