--- a/Pollute.uproject
+++ b/Pollute.uproject
@@ -30,6 +30,10 @@
 		{
 			"Name": "OnlineSubsystemSteam",
 			"Enabled": true
+		},
+		{
+			"Name": "WaveformEditor",
+			"Enabled": true
 		}
 	]
 }
