--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,7 +74,8 @@ GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/Pollute")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/Pollute")
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/Pollute")
-
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
